--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,15 @@ img {
   z-index: 10;
 }
 .cases {
+  padding: 70px 0;
   max-width: 800px;
   margin: 60px auto;
   height: 1500px;
+}
+.cases1 {
+  padding: 70px 0;
+  background-color: rgb(175, 156, 249);
+  margin: 60px auto;
+  height: 1500px;
+  max-width: 800px;
 }
